--- a/build.xml
+++ b/build.xml
@@ -97,7 +97,7 @@
 	-->
 <target name="ImageMetadataGenerator" depends="compile" description="test the ImageMetadataGenerator: example: ant.bat ImageMetadataGenerator -Dinput=media/img/ -Doutput=test/">
 <!-- set default values for properties / overwrite via commandline! -->
-<property name="input" location="../media/img/" />
+<property name="input" location="media/img/" />
 <property name="output" location="result/" />
 
 <mkdir dir="${output}" />
@@ -137,7 +137,7 @@
     -->
 <target name="ImageHistogramGenerator" depends="compile" description="test the ImageHistogramGenerator: example: ant.bat ImageHistogramGenerator -Dinput=media/img/ -Doutput=test/ -Dbins=256">
 <!-- set default values for properties / overwrite via commandline! -->
-<property name="input" location="../media/img/" />
+<property name="input" location="media/img/" />
 <property name="output" location="result/" />
 <property name="bins" value="256" />
 
@@ -164,7 +164,7 @@
 -->
 <target name="AudioThumbGenerator" depends="compile" description="test the audio thumbnail generator. Example: ant.bat AudioThumbGenerator -Dinput=media/audio/ -Doutput=test/ -Dlength=10">
 <!-- set default values for properties / overwrite via commandline! -->
-<property name="input" location="../media/audio/" />
+<property name="input" location="media/audio/" />
 <property name="output" location="result/" />
 <property name="length" location="10" />
 
@@ -185,7 +185,7 @@
 -->
 <target name="AudioMetadataGenerator" depends="compile" description="test the audio metadata generator. Example: ant.bat AudioMetadataGenerator -Dinput=media/audio/ -Doutput=test/">
 <!-- set default values for properties / overwrite via commandline! -->
-<property name="input" location="../media/audio/" />
+<property name="input" location="media/audio/" />
 <property name="output" location="result/" />
 
 <mkdir dir="${output}" />
@@ -206,7 +206,7 @@
 -->
 <target name="AudioPlayer" depends="compile" description="play an audio file. Example: ant.bat AudioPlayer -Dinput=media/audio/mySong.mp3">
 <!-- set default values for properties / overwrite via commandline! -->
-<property name="input" location="../media/audio/Amazon.mp3" />
+<property name="input" location="media/audio/Amazon.mp3" />
 
 <java classname="itm.audio.AudioPlayer">
 	<arg value="${input}" />
@@ -224,7 +224,7 @@
 -->
 <target name="VideoFrameGrabber" depends="compile" description="test the video thumbnail generator. Example: ant.bat VideoFrameGrabber -Dinput=media/video/ -Doutput=test/">
 <!-- set default values for properties / overwrite via commandline! -->
-<property name="input" location="../media/video/" />
+<property name="input" location="media/video/" />
 <property name="output" location="result/" />
 
 <java classname="itm.video.VideoFrameGrabber">
@@ -244,7 +244,7 @@
 -->
 <target name="VideoMetadataGenerator" depends="compile" description="test the video metadata generator. Example: ant.bat VideoMetadataGenerator -Dinput=media/video/ -Doutput=test/">
 <!-- set default values for properties / overwrite via commandline! -->
-<property name="input" location="../media/video/" />
+<property name="input" location="media/video/" />
 <property name="output" location="result/" />
 
 <java classname="itm.video.VideoMetadataGenerator">
@@ -264,7 +264,7 @@
 -->
 <target name="VideoThumbnailGenerator" depends="compile" description="test the video thumb generator. Example: ant.bat VideoThumbnailGenerator -Dinput=media/video/panda.avi -Doutput=test/">
 <!-- set default values for properties / overwrite via commandline! -->
-<property name="input" location="/media/video/panda.avi" />
+<property name="input" location="media/video/panda.avi" />
 <property name="output" location="test/" />
 
 <java classname="itm.video.VideoThumbnailGenerator" fork="true">
